mkvtoolnix: avoid configuration error
The boost library `libboost_system-mt.dll` was an empty dummy that is no
longer being distributed since boost is built with cmake (see #22040).

Configuration fails if no `boost-system` library is found. Work around
that configuration error by pointing to an existing library in the
respective configure flag. Use a library that is going to be used anyway.

--- a/mingw-w64-mkvtoolnix/PKGBUILD
+++ b/mingw-w64-mkvtoolnix/PKGBUILD
@@ -58,10 +58,13 @@ build() {
     CXXFLAGS+=" -Wno-template-id-cdtor"
   fi
 
+  # libboost_system-mt.dll was an empty dummy library that is no longer being
+  # distributed.  Avoid configuration error by providing an existing library
+  # that is going to be used anyway instead.
   CXXFLAGS+=" -Wno-ignored-attributes" \
   ./configure \
     --prefix="${MINGW_PREFIX}" \
-    --with-boost-system=boost_system-mt \
+    --with-boost-system=boost_filesystem-mt \
     --with-boost-filesystem=boost_filesystem-mt \
     --disable-update-check
 
