--- a/mingw-w64-mkvtoolnix/PKGBUILD
+++ b/mingw-w64-mkvtoolnix/PKGBUILD
@@ -34,12 +34,23 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "po4a"
              "zsh")
 source=(https://mkvtoolnix.download/sources/mkvtoolnix-${pkgver}.tar.xz{,.sig}
-        "001-fix-build-with-fmt-11.patch::https://gitlab.com/mbunkus/mkvtoolnix/-/commit/b57dde69.patch")
+        "001-fix-build-with-fmt-11.patch"::https://gitlab.com/mbunkus/mkvtoolnix/-/commit/b57dde69.patch
+        "002-add-missing-include-for-Qt-6.8.patch"::https://gitlab.com/mbunkus/mkvtoolnix/-/merge_requests/2264.patch)
 sha256sums=('635f1dcdc6c42852ea8fe621b50f68c224dda970fd8086944685111368d9c50c'
             'SKIP'
-            '09d6e953db263db44ea70d0c18b9d6ddb993431b223a27d113733036eaca46be')
+            '09d6e953db263db44ea70d0c18b9d6ddb993431b223a27d113733036eaca46be'
+            'e94f4f71b1c9a6cdbeeedab76da809f7c0e76f67fe89624774703d74de99694e')
 validpgpkeys=('D9199745B0545F2E8197062B0F92290A445B9007') # Moritz Bunkus <moritz@bunkus.org>
 noextract=(mkvtoolnix-${pkgver}.tar.xz)
+
+# Helper macros to help make tasks easier #
+apply_patch_with_msg() {
+  for _fname in "$@"
+  do
+    msg2 "Applying ${_fname}"
+    patch -Nbp1 -i "${srcdir}"/${_fname}
+  done
+}
 
 prepare() {
   plain "Extracting mkvtoolnix-${pkgver}.tar.xz due to symlink(s) without pre-existing target(s)"
@@ -48,7 +59,9 @@ prepare() {
   tar -xJf ${srcdir}/mkvtoolnix-${pkgver}.tar.xz -C ${srcdir} || true
 
   cd ${_realname}-${pkgver}
-  patch -p1 -i "${srcdir}"/001-fix-build-with-fmt-11.patch
+  apply_patch_with_msg \
+    001-fix-build-with-fmt-11.patch \
+    002-add-missing-include-for-Qt-6.8.patch
 }
 
 build() {
