mkvtoolnix: skip building unit tests
Building the unit tests fails with an error related to
`std::filesystem`.
Skip building them even if gtest happens to be installed.

--- a/mingw-w64-mkvtoolnix/PKGBUILD
+++ b/mingw-w64-mkvtoolnix/PKGBUILD
@@ -79,7 +79,8 @@ build() {
     --prefix="${MINGW_PREFIX}" \
     --with-boost-system=boost_filesystem-mt \
     --with-boost-filesystem=boost_filesystem-mt \
-    --disable-update-check
+    --disable-update-check \
+    ac_cv_lib_gtest_main_main=no
 
   rake
 }
