pyqt6: update to 6.8.0dev2410211537
6.7.1 doesn't work with Qt6 6.8.0

--- a/mingw-w64-pyqt6/PKGBUILD
+++ b/mingw-w64-pyqt6/PKGBUILD
@@ -3,7 +3,8 @@
 _realname=pyqt6
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=6.7.1
+_pkgver=6.8.0.dev2410211537
+pkgver=${_pkgver/.dev/dev}
 pkgrel=1
 pkgdesc="Python bindings for the Qt cross platform application toolkit (mingw-w64)"
 arch=('any')
@@ -51,13 +52,14 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-qt6-tools"
              "${MINGW_PACKAGE_PREFIX}-qt6-webchannel"
              "${MINGW_PACKAGE_PREFIX}-qt6-websockets")
-source=(https://pypi.python.org/packages/source/P/PyQt6/PyQt6-${pkgver}.tar.gz)
-sha256sums=('3672a82ccd3a62e99ab200a13903421e2928e399fda25ced98d140313ad59cb9')
+#source=(https://pypi.python.org/packages/source/P/PyQt6/PyQt6-${pkgver}.tar.gz)
+source=(https://www.riverbankcomputing.com/pypi/packages/PyQt6/PyQt6-${_pkgver}.tar.gz)
+sha256sums=('cb390cd6746c53428ecfb97578507aba753f342f1679edbabf27480d3640ef4c')
 
 prepare() {
   cd "${srcdir}"
   rm -rf python-build-${MSYSTEM} | true
-  cp -r PyQt6-${pkgver} python-build-${MSYSTEM}
+  cp -r PyQt6-${_pkgver} python-build-${MSYSTEM}
 }
 
 build() {
