--- a/mingw-w64-typst/PKGBUILD
+++ b/mingw-w64-typst/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.12.0
 pkgrel=1
 pkgdesc='A markup-based typesetting system for the sciences (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url='https://typst.app/'
 msys2_repository_url='https://github.com/typst/typst/'
 msys2_references=(
