gromacs: update to 2024.3

--- a/mingw-w64-gromacs/PKGBUILD
+++ b/mingw-w64-gromacs/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=gromacs
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=2024.2
+pkgver=2024.3
 pkgrel=1
 pkgdesc="A free and open-source software suite for high-performance molecular dynamics and output analysis. (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64')
 url='https://www.gromacs.org/'
+msys2_repository_url="https://gitlab.com/gromacs/gromacs"
 license=('spdx:LGPL-2.1-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-fftw"
@@ -26,7 +27,7 @@ source=("https://ftp.gromacs.org/gromacs/${_realname}-${pkgver}.tar.gz"
         "002-fix-build-clfft.patch"
         "003-use-_putenv-on-mingw.patch"
         "004-define-libgromacs_EXPORTS.patch")
-sha256sums=('802a7e335f2e895770f57b159e4ec368ebb0ff2ce6daccf706c6e8025c36852b'
+sha256sums=('bbda056ee59390be7d58d84c13a9ec0d4e3635617adf2eb747034922cba1f029'
             'd5a39e555577f766496ceaa68025e98f82031ebd06c8df0523f0d750ba4c7590'
             '06f4dd5a33d0a2cae8d4e04a23eab7c441f63b79c38b374d3740eda35353a2c2'
             'e5c3ade4df87dd3a27cbfa67c7dd4cf10ea0a318ecbafa6e7770e29788e80f64'
