nodejs: update to 23.1.0

--- a/mingw-w64-nodejs/PKGBUILD
+++ b/mingw-w64-nodejs/PKGBUILD
@@ -8,7 +8,7 @@
 _realname=nodejs
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=22.9.0
+pkgver=23.1.0
 pkgrel=1
 pkgdesc="An open-source, cross-platform JavaScript runtime environment (mingw-w64)"
 arch=('any')
@@ -113,6 +113,8 @@ prepare() {
   apply_patch_with_msg \
     0201-v8-buildflags-fixes.patch \
     0202-v8-builtin-deps-buildflags-fixes.patch
+
+  find 'deps/npm/node_modules' -depth -name '*.orig' -exec rm -f {} ';'
 }
 
 build() {
@@ -182,7 +184,7 @@ package() {
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/nodejs/LICENSE"
 }
 
-sha256sums=('a55aeb368dee93432f610127cf94ce682aac07b93dcbbaadd856df122c9239df'
+sha256sums=('57cbfd3dd51f9300ea2b8e60a8ed215b1eaa71fbde4c3903a7d31a443a4a4423'
             'cb56e4f4160dae1041448be64760296634a3aa86fb163ccbfd645f4ae96d2026'
             'e9a8bd133ec58cdf1987ec4c3dd7f0b2e290ebd708d0f988f56e28c01f376767'
             'c420caaa03bc1c809f48ddcb19157ba0284e33fb6cffff8354c9fc4aa75e2afc'
@@ -192,17 +194,17 @@ sha256sums=('a55aeb368dee93432f610127cf94ce682aac07b93dcbbaadd856df122c9239df'
             '8a685608e4ef8d2a53222135dfbc51bb337b043939dcd7f50683acd8787f4fe1'
             'c2daca3eec876a98adcbb35c7438afe24beb8a1953b62947912f7ea25c63fcb9'
             '63cc0a5996fcbdc0959ede2755740493b7c3eda5d878dacc76f6ddec22321c65'
-            '5d986e7f7654778f02e624eb2ac15765e35559bac2c9aa37dae010bc329e05bd'
-            '1e9c1d3c3d49ab922c002439a383175208a9c38e6a41dfc66a6ea52e60b0618f'
+            '442ffeefa393487940735247b5cad9eb585d9b3667a45e5efb7a4973daac9261'
+            '709f14cc5abf36bad8b24d014985a0a77718739e0c1dc932565796a1480d1887'
             '99e64bacf33db5cee211eba00841368d22b40030a91e0475c93c4fe4f76f27d1'
-            'ec5e6dcb3207682b99990af05a93f4f1e653307fa928c4c48e0fdf1e60000861'
-            '08ca21ae3202c5081b23b7b86c5dd8a93e4c85924edc939278873c09935e64d6'
+            '67953237885a5b990f326b7155780ea082d933ee40d071cba22953d9d8299d3d'
+            '10944ecd5dbc60c8d698ecb2b4ed5acb0289a40c5376fe0aea80c409206d7f8a'
             '208e9816d851245271a78516e86505c03f3fc7918663372974a128e2f1f09c62'
             'c7d56e545bf21328b0e9f88add15dc7bc39f3adb90d2079bf3448cc8746fa9e3'
-            '335a58064e22d0ca140be69060951054dbabf5c4c929d7831209609da48aa506'
+            '930d964034563ba9ffc49c65dfd1e00b19d8906447b9e5186543acfe531cc4c2'
             '701cef4edacfd6b2512bb7a42ef388eb704bc500108062af4ead0439667da416'
             '7d498f8090ab05458f28a5d2c60ef8511d2b48bc5368fda06922c35ca2584a22'
-            '601ca4c84533c88fe30b5bbfa3f9cabc51a7316b8ce88e56a641b10861d66135'
+            'c464c7aed1e23d53ff7140185a7f9c3f3ef73049b7f2374f808efb78f01523a4'
             '18ca0c99da6761aeba3b2e8b6fa23787d7d3114e1798fecd9037e9a7a8bc93c1'
             'd4343762547064931ccfacca4906ad042f4ef81f73f86ee654ee152e0bc8844f'
             '67d40fde6aaa108db2de4d946874857607bade8fa0ee76d77b759439fa80f246'
@@ -210,8 +212,8 @@ sha256sums=('a55aeb368dee93432f610127cf94ce682aac07b93dcbbaadd856df122c9239df'
             'd5cc3e2bf8b506dce2a96105eb6a6ff300088a7b488cbe6d390efdb7d6c630e5'
             'b07a5125182104cd43a1bd07a637096962fc475664e2292cc4bd79a69ca442da'
             '22330afcfd297e680062f89d62816afa7b3e6b316950927fe31c6eff31642f26'
-            '788858123f565ae0526b438f11ead5abbc2ec9239565e295c256d71d8a0d2d20'
-            'e097e80a416b758cdcb84cb9cf164afde9efb3221c40d782f4cf54d06f9623b3'
-            '65deeaa7424174d925276a95f3fe4ec2dcdc4cdc5a30f7b874b38626b3bd6f0b'
-            'ef4304e43d86f79adceabe04068e5b19b0b24b880731abc02517230b83484638'
+            '892d5f1d47079a5389be8078f87cb43a68e73b7809e9e2f58b30e57e06506e57'
+            '88aec176748473f6aa81344a9f9f4752d1d366fa5b0a9be1ce42d41f80173565'
+            'a884c89fb7838274f5b4c845f53e93aaadc9fe105801726c0c86fd185d97ba20'
+            '39e1ddc31b445672a657760a2d494c2c143b9f0b0c5106d468ffb8d478e438ec'
             '284251ff443506cd61530a026afb421d0084e4ad25c037bcfe3a045246d729a2')
