--- a/mingw-w64-meson-python/PKGBUILD
+++ b/mingw-w64-meson-python/PKGBUILD
@@ -3,11 +3,11 @@
 _realname=meson-python
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.16.0
+pkgver=0.17.1
 pkgrel=1
 pkgdesc="Meson PEP 517 Python build backend (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: meson-python'
   'pypi: meson-python'
@@ -22,7 +22,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-meson"
 makedepends=()
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
-sha256sums=('9068c17e36c89d6c7ff709fffb2a8a9925e8cd0b02629728e5ceaf2ec505cb5f')
+sha256sums=('efb91f69f2e19eef7bc9a471ed2a4e730088cc6b39eacaf3e49fc4f930eb5f83')
 
 build() {
   mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
