--- a/mingw-w64-scotch/PKGBUILD
+++ b/mingw-w64-scotch/PKGBUILD
@@ -30,8 +30,7 @@ sha256sums=('385507a9712bb9057497b9ac3f24ad2132bd3f3f8c7a62e78324fc58f2a0079b'
             'c52bf0598332d8139a37606e7ea9376b7f841059047c0c977b205a763fc7e97a'
             'b6e76b1d2f35b3fcc771b97a35a468d6314ee3a619defef18b82fc7654638a49'
             '15dd82d4c7b118e08316df4242d647bdaa1f180ff143ee33fe84633c97aac111'
-            'F782C74476F8A7E3805E452D93FEF826455F1D84F689E0EDF5562E32BE2A6C51')
-
+            'SKIP')
 prepare() {
   cd "${srcdir}/${_realname}-v${pkgver}"
   for p in ${source[*]:3}; do
