--- a/mingw-w64-wasmtime/PKGBUILD
+++ b/mingw-w64-wasmtime/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-lib${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
 pkgver=26.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A fast and secure runtime for WebAssembly (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -58,26 +58,14 @@ build() {
   cmake \
     -GNinja \
     -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
-    -DBUILD_SHARED_LIBS=OFF \
-    -DWASMTIME_FASTEST_RUNTIME=ON \
-    -DWASMTIME_TARGET="$(rustc -vV | sed -n 's/host: //p')" \
-    "${extra_config[@]}" \
-    -S "${_realname}/crates/c-api" \
-    -B "build-${MSYSTEM}-static"
-
-  cmake --build "build-${MSYSTEM}-static"
-
-  cmake \
-    -GNinja \
-    -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
     -DBUILD_SHARED_LIBS=ON \
     -DWASMTIME_FASTEST_RUNTIME=ON \
     -DWASMTIME_TARGET="$(rustc -vV | sed -n 's/host: //p')" \
     "${extra_config[@]}" \
     -S "${_realname}/crates/c-api" \
-    -B "build-${MSYSTEM}-shared"
+    -B "build-${MSYSTEM}"
 
-  cmake --build "build-${MSYSTEM}-shared"
+  cmake --build "build-${MSYSTEM}"
 
   cargo build \
     --frozen \
@@ -111,15 +99,15 @@ package_wasmtime() {
 package_libwasmtime() {
   pkgdesc+=' (C-API)'
   conflicts=("${MINGW_PACKAGE_PREFIX}-libwasmer")
-  options=('!strip')
 
-  DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}-static"
-  DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}-shared"
-  install -Dm644 "build-${MSYSTEM}-shared/include/wasmtime/conf.h" \
+  DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}"
+  install -Dm644 "build-${MSYSTEM}/include/wasmtime/conf.h" \
     "${pkgdir}${MINGW_PREFIX}/include/wasmtime/conf.h"
   install -d "${pkgdir}${MINGW_PREFIX}/bin"
 
   mv "${pkgdir}${MINGW_PREFIX}/lib/wasmtime.dll" "${pkgdir}${MINGW_PREFIX}/bin/wasmtime.dll"
+  rm "${pkgdir}${MINGW_PREFIX}/lib/libwasmtime.a"
+
   install -Dm644 "${_realname}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/lib${_realname}/LICENSE"
 }
 
