--- a/mingw-w64-rust/config.toml
+++ b/mingw-w64-rust/config.toml
@@ -50,8 +50,8 @@ lld = false
 codegen-tests = false
 deny-warnings = false
 backtrace-on-ice = true
-# FIXME: CFG can be enabled only for MSVC targets as for https://github.com/rust-lang/rust/pull/74103
-# control-flow-guard = true
+# FIXME: CFG is enabled for gnullvm targets only
+#control-flow-guard = true
 
 [dist]
 compression-formats = ["gz"]
