--- a/mingw-w64-python-sphinx-issues/PKGBUILD
+++ b/mingw-w64-python-sphinx-issues/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=sphinx-issues
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=4.1.0
+pkgver=5.0.0
 pkgrel=1
 pkgdesc="Sphinx extension for linking to your project's issue tracker (mingw-w64)"
 arch=('any')
@@ -20,8 +20,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-flit-core")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
-source=("https://pypi.io/packages/source/${_realname:0:1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
-sha256sums=('a67f7ef31d164b420b2f21b6c9b020baeb4a014afd4045f5be314c984e8ee520')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz")
+sha256sums=('192e43cf071ed7aead401cd14fd15076ecb0866238c095d672180618740c6bae')
 
 build() {
   cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
