python-sphinx_rtd_theme: update to 3.0.1

--- a/mingw-w64-python-sphinx_rtd_theme/PKGBUILD
+++ b/mingw-w64-python-sphinx_rtd_theme/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=sphinx_rtd_theme
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.0.0
+pkgver=3.0.1
 pkgrel=1
 pkgdesc="Python Sphinx Read The Docs Theme (mingw-w64)"
 arch=('any')
@@ -20,11 +20,10 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-sphinxcontrib-jquery")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel")
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('bd5d7b80622406762073a04ef8fadc5f9151261563d47027de09910ce03afe6b')
+sha256sums=('a4c5745d1b06dfcb80b7704fe532eb765b44065a8fad9851e4258c8804140703')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
