python-sphinxcontrib-devhelp: update to 2.0.0

--- a/mingw-w64-python-sphinxcontrib-devhelp/PKGBUILD
+++ b/mingw-w64-python-sphinxcontrib-devhelp/PKGBUILD
@@ -1,13 +1,9 @@
 # Maintainer: Peter Budai <peterbudai@hotmail.com>
 
-_pyname=sphinxcontrib_devhelp
 _realname=sphinxcontrib-devhelp
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=1.0.6
+pkgver=2.0.0
 pkgrel=1
 pkgdesc="Sphinx extension which outputs Devhelp document (mingw-w64)"
 arch=('any')
@@ -24,11 +20,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-flit-core"
              "${MINGW_PACKAGE_PREFIX}-python-installer")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
-source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('9893fd3f90506bc4b97bdb977ceb8fbd823989f4316b28c3841ec128544372d3')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz")
+sha256sums=('411f5d96d445d1d73bb5d52133377b4248ec79db5c793ce7dbe59e074b4dd1ad')
 
 build() {
-  cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
@@ -44,5 +40,5 @@ package() {
     ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
 
-  install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
+  install -Dm644 LICENCE.rst "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENCE.rst"
 }
