python-sphinxcontrib-htmlhelp: update to 2.1.0

--- a/mingw-w64-python-sphinxcontrib-htmlhelp/PKGBUILD
+++ b/mingw-w64-python-sphinxcontrib-htmlhelp/PKGBUILD
@@ -1,10 +1,9 @@
 # Maintainer: Peter Budai <peterbudai@hotmail.com>
 
-_pyname=sphinxcontrib_htmlhelp
 _realname=sphinxcontrib-htmlhelp
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.0.6
+pkgver=2.1.0
 pkgrel=1
 pkgdesc="Sphinx extension which renders HTML help files (mingw-w64)"
 arch=('any')
@@ -21,11 +20,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-flit-core"
              "${MINGW_PACKAGE_PREFIX}-python-installer")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
-source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('c6597da06185f0e3b4dc952777a04200611ef563882e0c244d27a15ee22afa73')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz")
+sha256sums=('c9e2916ace8aad64cc13a0d233ee22317f2b9025b9cf3295249fa985cc7082e9')
 
 build() {
-  cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
@@ -41,5 +40,5 @@ package() {
     ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
 
-  install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
+  install -Dm644 LICENCE.rst "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENCE.rst"
 }
