--- a/mingw-w64-python-sphinxcontrib-serializinghtml/PKGBUILD
+++ b/mingw-w64-python-sphinxcontrib-serializinghtml/PKGBUILD
@@ -1,13 +1,9 @@
 # Maintainer: Peter Budai <peterbudai@hotmail.com>
 
-_pyname=sphinxcontrib_serializinghtml
 _realname=sphinxcontrib-serializinghtml
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=1.1.10
+pkgver=2.0.0
 pkgrel=1
 pkgdesc='Sphinx extension which outputs "serialized" HTML files (json and pickle) (mingw-w64)'
 arch=('any')
@@ -24,11 +20,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-flit-core"
              "${MINGW_PACKAGE_PREFIX}-python-installer")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
-source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('93f3f5dc458b91b192fe10c397e324f262cf163d79f3282c158e8436a2c4511f')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz")
+sha256sums=('e9d912827f872c029017a53f0ef2180b327c3f7fd23c87229f7a8e8b70031d4d')
 
 build() {
-  cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
@@ -44,5 +40,5 @@ package() {
     ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
 
-  install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
+  install -Dm644 LICENCE.rst "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENCE.rst"
 }
