python-sphinxcontrib-svg2pdfconverter: update to 1.2.3

--- a/mingw-w64-python-sphinxcontrib-svg2pdfconverter/PKGBUILD
+++ b/mingw-w64-python-sphinxcontrib-svg2pdfconverter/PKGBUILD
@@ -3,12 +3,12 @@
 _realname=sphinxcontrib-svg2pdfconverter
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.2.2
-pkgrel=3
+pkgver=1.2.3
+pkgrel=1
 pkgdesc="Sphinx SVG to PDF converter extension (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://github.com/sephalon/sphinxcontrib-svg2pdfconverter/"
+url="https://github.com/missinglinkelectronics/sphinxcontrib-svg2pdfconverter"
 msys2_references=(
   'pypi: sphinxcontrib-svg2pdfconverter'
 )
@@ -17,20 +17,14 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-sphinx")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel")
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 optdepends=("${MINGW_PACKAGE_PREFIX}-librsvg: Use librsvg engine"
             "${MINGW_PACKAGE_PREFIX}-inkscape: Use inkscape engine")
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('80a55ca61f70eae93efc65f3814f2f177c86ba55934a9f6c5022f1778b62146b')
-
-prepare() {
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz")
+sha256sums=('fb5d517b634c5629522004c59edce4d9050d89822408cab452c7d52fe5ae9824')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
