python-sphinxcontrib-websupport: update to 2.0.0

--- a/mingw-w64-python-sphinxcontrib-websupport/PKGBUILD
+++ b/mingw-w64-python-sphinxcontrib-websupport/PKGBUILD
@@ -1,13 +1,9 @@
 # Maintainer: Alexey Pavlov <alexpux@gmail.com>
 
-_pyname=sphinxcontrib_websupport
 _realname=sphinxcontrib-websupport
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=1.2.7
+pkgver=2.0.0
 pkgrel=1
 pkgdesc="Sphinx API for Web Apps (mingw-w64)"
 arch=('any')
@@ -27,17 +23,11 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-installer"
   "${MINGW_PACKAGE_PREFIX}-python-flit-core"
 )
-source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('e322802ebfd5fe79368efd864aeb87b063566ae61911dccb2714e28a45ed7561')
-
-prepare() {
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz")
+sha256sums=('0b7367d3bac6454b1f97e42aa8c4d4d4a1b756d525fc726ebbe5571e033e79cd')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-
+  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
@@ -48,5 +38,5 @@ package() {
     ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
 
-  install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
+  install -Dm644 LICENCE.rst "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENCE.rst"
 }
