--- a/mingw-w64-python-pyarrow/PKGBUILD
+++ b/mingw-w64-python-pyarrow/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=pyarrow
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=17.0.0
-pkgrel=2
+pkgver=18.0.0
+pkgrel=1
 pkgdesc="Columnar in-memory analytics layer for big data — Python module (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -33,25 +33,20 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-wheel"
 )
 options=('!strip')
-source=("https://www.apache.org/dyn/closer.lua?action=download&filename=arrow/arrow-${pkgver}/apache-arrow-${pkgver}.tar.gz"{,.asc}
-        "0001-arrow-setup-fix-cmake-generator.patch")
-sha256sums=('9d280d8042e7cf526f8c28d170d93bfab65e50f94569f6a790982a878d8d898d'
-            'SKIP'
-            '77442c5681af7cdfff8d37dd8eb94e52b934db086c605459e0ab68535d820d47')
+source=("https://www.apache.org/dyn/closer.lua?action=download&filename=arrow/arrow-${pkgver}/apache-arrow-${pkgver}.tar.gz"{,.asc})
+sha256sums=('abcf1934cd0cdddd33664e9f2d9a251d6c55239d1122ad0ed223b13a583c82a9'
+            'SKIP')
 validpgpkeys=(
   'AF6AADA4C9835B75973FF5DA275C532289DD0F4A' # Raúl Cumplido Domínguez (CODE SIGNING KEY) <raulcd@apache.org>
+  '08D3564B7C6A9CAFBFF6A66791D18FCF079F8007' # Kouhei Sutou <kou@clear-code.com>
 )
-
-prepare() {
-  cd "apache-arrow-${pkgver}"
-  patch -p1 -i "${srcdir}/0001-arrow-setup-fix-cmake-generator.patch"
-}
 
 build() {
   export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
 
   cd "apache-arrow-${pkgver}/python"
 
+  PYARROW_CMAKE_GENERATOR="Ninja" \
   PYARROW_CMAKE_OPTIONS="-DARROW_SIMD_LEVEL=NONE -DARROW_RUNTIME_SIMD_LEVEL=MAX" \
   PYARROW_WITH_DATASET=1 \
   PYARROW_WITH_FLIGHT=1 \
