--- a/mingw-w64-highs/PKGBUILD
+++ b/mingw-w64-highs/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=HiGHS
 pkgbase=mingw-w64-highs
 pkgname=("${MINGW_PACKAGE_PREFIX}-highs")
-pkgver=1.6.0
+pkgver=1.8.0
 pkgrel=1
 pkgdesc="High performance linear optimization software (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://www.highs.dev/'
+msys2_repository_url="https://github.com/ERGO-Code/HiGHS"
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-zlib"
@@ -18,7 +19,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-fc")
 source=("${_realname}-${pkgver}.tar.gz::https://github.com/ERGO-Code/${_realname}/archive/refs/tags/v${pkgver}.tar.gz")
-sha256sums=('71962981566477c72c51b8b722c5df053d857b05b4f0e6869f455f657b3aa193')
+sha256sums=('e184e63101cf19688a02102f58447acc7c021d77eef0d3475ceaceb61f035539')
 
 build() {
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
@@ -52,5 +53,5 @@ package() {
 
   DESTDIR="${pkgdir}" "${MINGW_PREFIX}"/bin/cmake.exe --install .
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE.txt" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.txt"
 }
