--- a/mingw-w64-python-spyder/PKGBUILD
+++ b/mingw-w64-python-spyder/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=spyder
 pkgbase=mingw-w64-python-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-${_realname}
-pkgver=5.5.6
+pkgver=6.0.1
 pkgrel=1
 pkgdesc='The Scientific Python Development Environment (mingw-w64)'
 arch=('any')
@@ -17,7 +17,9 @@ msys2_references=(
 license=('spdx:MIT')
 depends=(
     ${MINGW_PACKAGE_PREFIX}-python
+    ${MINGW_PACKAGE_PREFIX}-python-aiohttp
     ${MINGW_PACKAGE_PREFIX}-python-atomicwrites
+    ${MINGW_PACKAGE_PREFIX}-python-asyncssh
     ${MINGW_PACKAGE_PREFIX}-python-chardet
     ${MINGW_PACKAGE_PREFIX}-python-cloudpickle
     ${MINGW_PACKAGE_PREFIX}-python-cookiecutter
@@ -42,7 +44,9 @@ depends=(
     ${MINGW_PACKAGE_PREFIX}-python-pyls-spyder
     ${MINGW_PACKAGE_PREFIX}-python-pyqt5
     ${MINGW_PACKAGE_PREFIX}-python-lsp-server
+    ${MINGW_PACKAGE_PREFIX}-python-pygithub
     ${MINGW_PACKAGE_PREFIX}-python-pyzmq
+    ${MINGW_PACKAGE_PREFIX}-python-pyuca
     ${MINGW_PACKAGE_PREFIX}-python-qdarkstyle
     ${MINGW_PACKAGE_PREFIX}-python-qstylizer
     ${MINGW_PACKAGE_PREFIX}-python-qtawesome
@@ -52,9 +56,11 @@ depends=(
     ${MINGW_PACKAGE_PREFIX}-python-setuptools
     ${MINGW_PACKAGE_PREFIX}-python-sphinx
     ${MINGW_PACKAGE_PREFIX}-python-spyder-kernels
+    ${MINGW_PACKAGE_PREFIX}-python-superqt
     ${MINGW_PACKAGE_PREFIX}-python-textdistance
     ${MINGW_PACKAGE_PREFIX}-python-three-merge
     ${MINGW_PACKAGE_PREFIX}-python-watchdog
+    ${MINGW_PACKAGE_PREFIX}-python-yarl
     ${MINGW_PACKAGE_PREFIX}-qtwebkit
 )
 optdepends=(
@@ -71,8 +77,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
 options=(!strip)
 source=(https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz
         spyder-requirements-fix.patch)
-sha256sums=('958b669f4a015c5c391050eb6effa8d84656a8bfc47a5f46adba297849d82bdd'
-            '3a1d4e1c9fa9c80759b83e764583464c9e53f0e7b3ad1e75e5f57992f2437dab')
+sha256sums=('709782e88091588bbe614de6ebbde7b47544a4d6c225e199de5ad22b77d8b130'
+            '1c31c5d6f084f4b6537207fdf00924feeda5c4d0b803b79cc818e2fcc421ddc6')
 
 prepare() {
   cd ${_realname}-${pkgver}
