gnupg: update to 2.4.6

--- a/mingw-w64-gnupg/PKGBUILD
+++ b/mingw-w64-gnupg/PKGBUILD
@@ -4,7 +4,7 @@
 _realname=gnupg
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.4.5
+pkgver=2.4.6
 pkgrel=1
 pkgdesc="GNU Privacy Guard - a PGP replacement tool (mingw-w64)"
 arch=('any')
@@ -39,7 +39,7 @@ source=(https://gnupg.org/ftp/gcrypt/gnupg/${_realname}-${pkgver}.tar.bz2{,.sig}
         03-ldap-libraries-check-order.patch
         04-dos-extra-defs.patch
         05-gnupg-include-winber.patch)
-sha256sums=('f68f7d75d06cb1635c336d34d844af97436c3f64ea14bcb7c869782f96f44277'
+sha256sums=('95acfafda7004924a6f5c901677f15ac1bda2754511d973bb4523e8dd840e17a'
             'SKIP'
             'ab05acce27ade6510e913c7c901855a71843a6ee3c3713f3dc881e49a8d55e91'
             '28b8eeeb9c078b9a1ff153a8187ad54e194bd1b23017ea60cfdcb02c4000fc43'
@@ -81,7 +81,9 @@ build() {
 # I had to disable doc generation because that would cause a
 #a segmentation fault with something related to tex files.
 #It would only happen for 32-bit versions.
-  CFLAGS+=" -Wno-int-conversion" \
+
+# Workaround for gcc 14 compiler error
+  CFLAGS+=" -Wno-error=incompatible-pointer-types -Wno-int-conversion" \
   ../${_realname}-${pkgver}/configure \
       --prefix=${MINGW_PREFIX} \
       --build=${MINGW_CHOST} \
