--- a/mingw-w64-libopenmpt/PKGBUILD
+++ b/mingw-w64-libopenmpt/PKGBUILD
@@ -3,11 +3,11 @@
 _realname=libopenmpt
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.7.10
+pkgver=0.7.11
 pkgrel=1
 pkgdesc="A cross-platform C++ and C library to decode tracked music files (modules) into a raw PCM audio stream (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64' 'clang32')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://lib.openmpt.org/libopenmpt/'
 msys2_repository_url='https://github.com/OpenMPT/openmpt'
 msys2_references=(
@@ -24,7 +24,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-zlib"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-autotools")
 source=("https://lib.openmpt.org/files/${_realname}/src/${_realname}-${pkgver}+release.autotools.tar.gz")
-sha256sums=('093713c1c1024f4f10c4779a66ceb2af51fb7c908a9e99feb892d04019220ba1')
+sha256sums=('53a798b8c6e2e1f695e8ad05e93a0c1b53199e5aa9981837c41696b370520767')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}+release.autotools"
