asciidoctor: rebuild for ruby

--- a/mingw-w64-asciidoctor/PKGBUILD
+++ b/mingw-w64-asciidoctor/PKGBUILD
@@ -4,7 +4,7 @@ _realname=asciidoctor
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=2.0.23
-pkgrel=1
+pkgrel=2
 pkgdesc="An implementation of AsciiDoc in Ruby (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -20,30 +20,29 @@ check() {
   local _gemdir="$(ruby -e 'puts Gem.default_dir')"
   _gemdir="$(cygpath -u ${_gemdir})"
 
-  ${MINGW_PREFIX}/bin/gem check --verbose \
-    "${_realname}-${pkgver}.gem"
+  gem check --verbose "${_realname}-${pkgver}.gem"
 }
 
 package() {
-  local _gemdir="$(${MINGW_PREFIX}/bin/ruby -e 'puts Gem.default_dir')"
+  local _gemdir="$(ruby -e 'puts Gem.default_dir')"
   _gemdir="$(cygpath -u ${_gemdir})"
 
-  ${MINGW_PREFIX}/bin/gem install --ignore-dependencies --no-user-install --verbose \
+  gem install --ignore-dependencies --no-user-install --verbose \
     -i "${pkgdir}/${_gemdir}" -n "${pkgdir}${MINGW_PREFIX}/bin" \
     "${_realname}-${pkgver}.gem"
 
   local _ruby_exe=$(cygpath -m ${MINGW_PREFIX}/bin/ruby.exe)
 
-  #for this conversion, we want the fully qualified ruby .exe path
-  #so that we can be sure that we are calling the correct one.
+  # For this conversion, we want the fully qualified ruby.exe path
+  # so that we can be sure that we are calling the correct one.
   sed -e "s|${_ruby_exe}|${MINGW_PREFIX}/bin/ruby|g" \
       -i ${pkgdir}${MINGW_PREFIX}/bin/asciidoctor
 
-  #for Win32 .bat files, we want to drop the path references as the path
-  #refs are not needed since it's involved from the same dir.  If we did
-  #need fully-qualified pathes, they would have to be fully-qualified and
+  # For Win32 .bat files, we want to drop the path references as the path
+  # refs are not needed since it's invoked from the same dir. If we did
+  # need fully-qualified paths, they would have to be fully-qualified and
   # in DOS format.
-  local _inst_dir=$(cygpath -m ${pkgdir}/${MINGW_PREFIX}/bin/)
+  local _inst_dir=$(cygpath -m ${pkgdir}${MINGW_PREFIX}/bin/)
   local _w_ruby_exe=$(cygpath -w ${MINGW_PREFIX}/bin/ruby.exe | sed 's/\\/\\\\/g')
   sed  -e "s|${_w_ruby_exe}|ruby.exe|g" \
        -e "s|${_inst_dir}||g" \
