--- a/mingw-w64-ngraph-gtk/PKGBUILD
+++ b/mingw-w64-ngraph-gtk/PKGBUILD
@@ -4,8 +4,8 @@ _realname=ngraph-gtk
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=6.09.09
-pkgrel=1
-pkgdesc="create scientific 2-dimensional graphs (mingw-w64)"
+pkgrel=2
+pkgdesc="Create scientific 2-dimensional graphs (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://htrb.github.io/ngraph-gtk/"
