ruby-dbus: update to 0.23.1

--- a/mingw-w64-ruby-dbus/PKGBUILD
+++ b/mingw-w64-ruby-dbus/PKGBUILD
@@ -1,10 +1,9 @@
 # Maintainer: Andrew Sun <adsun701@gmail.com>
 
-_gemname=ruby-dbus
-_realname=${_gemname}
+_realname=ruby-dbus
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.17.0
+pkgver=0.23.1
 pkgrel=1
 pkgdesc="Ruby module for interaction with D-Bus (mingw-w64)"
 arch=('any')
@@ -12,17 +11,19 @@ mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/mvidner/ruby-dbus"
 license=('spdx:LGPL-2.1-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-ruby")
-source=(https://rubygems.org/downloads/${_gemname}-${pkgver}.gem)
-noextract=(${_gemname}-${pkgver}.gem)
-sha256sums=('7c5380a0797c6050160fd5940aba11741ac4d7050fd3ffd38be386a35643502e')
+source=(https://rubygems.org/downloads/${_realname}-${pkgver}.gem)
+noextract=(${_realname}-${pkgver}.gem)
+sha256sums=('f582da0a66e7a907dade9473c152194197e322e50771275853ac87b868f1c941')
 
 package() {
-  local _gemdir="$(ruby -e'puts Gem.default_dir')"
+  local _gemdir="$(ruby -e 'puts Gem.default_dir')"
   _gemdir="$(cygpath -u ${_gemdir})"
   
-  ${MINGW_PREFIX}/bin/gem install --ignore-dependencies --no-user-install -N -i "${pkgdir}${_gemdir}" -n "${pkgdir}${MINGW_PREFIX}/bin" ${_gemname}-${pkgver}.gem
+  gem install --ignore-dependencies --no-user-install --verbose \
+    -i "${pkgdir}/${_gemdir}" -n "${pkgdir}${MINGW_PREFIX}/bin" \
+    "${_realname}-${pkgver}.gem"
   
-  rm "${pkgdir}${_gemdir}/cache/${_gemname}-${pkgver}.gem"
+  rm "${pkgdir}/${_gemdir}/cache/${_realname}-${pkgver}.gem"
   
-  install -D -m644 "${pkgdir}${_gemdir}/gems/${_gemname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
+  install -Dm644 "${pkgdir}/${_gemdir}/gems/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
