hexyl: update to 0.15.0

--- a/mingw-w64-hexyl/PKGBUILD
+++ b/mingw-w64-hexyl/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=hexyl
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.14.0
+pkgver=0.15.0
 pkgrel=1
 pkgdesc="A command-line hex viewer (mingw-w64)"
 arch=('any')
@@ -15,30 +15,31 @@ msys2_references=(
   'purl: pkg:cargo/hexyl'
 )
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
-source=(
-  "${url}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
-)
-sha512sums=('770fe3db1fc10ba78cde00d727cf0494d0447e08e1e1f103bd206475c839d4d04c714b5257a3c42d2e489ce02e0b4b9b2701fb89ca9222830c87ccaa2fc8463c')
-b2sums=('1c2ccbb21c7aad1d2c1daca7ed99009ec2e2a02a96dd8a73d6ba11d00291f0e81afdd790d52219406ba4571408c68a5be714f5aeb36fc74c85d2868d4e0883d4')
+options=('!lto')
+source=("${url}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('017ab7fe18caa3d13427fb13fd6050a9d8bf9aa26d1e1fe02924dfd7f86cd3cf')
 
 prepare() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
 
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
 build() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
+
   cargo build --release --frozen
 }
 
 check() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
+
   cargo test --release --frozen
 }
 
 package() {
-  cd "${srcdir}/${_realname}-${pkgver}"
-  install -Dm 755 "target/release/${_realname}" "${pkgdir}${MINGW_PREFIX}/bin/${_realname}"
-  install -Dm 644 LICENSE* -t "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}"
+  cd "${_realname}-${pkgver}"
+
+  install -Dm755 "target/release/${_realname}" "${pkgdir}${MINGW_PREFIX}/bin/${_realname}"
+  install -Dm644 LICENSE-{APACHE,MIT} -t "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}"
 }
