ruby-native-package-installer: update to 1.1.9

--- a/mingw-w64-ruby-native-package-installer/PKGBUILD
+++ b/mingw-w64-ruby-native-package-installer/PKGBUILD
@@ -1,26 +1,27 @@
 # Maintainer: Andrew Sun <adsun701@gmail.com>
 
-_gemname=native-package-installer
-_realname=ruby-${_gemname}
-pkgbase=mingw-w64-${_realname}
-pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.1.5
+_realname=native-package-installer
+pkgbase=mingw-w64-ruby-${_realname}
+pkgname=("${MINGW_PACKAGE_PREFIX}-ruby-${_realname}")
+pkgver=1.1.9
 pkgrel=1
-pkgdesc="native-package-installer helps to install native packages on gem install (mingw-w64)"
+pkgdesc="A helper to install native packages on gem install (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/ruby-gnome2/native-package-installer"
 license=('spdx:LGPL-3.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-ruby")
-source=("https://rubygems.org/downloads/${_gemname}-${pkgver}.gem")
-noextract=("${_gemname}-${pkgver}.gem")
-sha256sums=('516ebbacd7382b7e424da96eda6666d60dfad4dd407245a6ad5c1ad94e803ae4')
+source=("https://rubygems.org/downloads/${_realname}-${pkgver}.gem")
+noextract=("${_realname}-${pkgver}.gem")
+sha256sums=('fbb41b6b22750791a4304f0a0aeea3dd837668892117f49c4caf2e8e0f4e792f')
 
 package() {
-  local _gemdir="$(ruby -e'puts Gem.default_dir')"
+  local _gemdir="$(ruby -e 'puts Gem.default_dir')"
   _gemdir="$(cygpath -u ${_gemdir})"
   
-  ${MINGW_PREFIX}/bin/gem install --ignore-dependencies --no-user-install -i "${pkgdir}${_gemdir}" -n "${pkgdir}${MINGW_PREFIX}/bin" ${_gemname}-${pkgver}.gem
+  gem install --ignore-dependencies --no-user-install --verbose \
+    -i "${pkgdir}/${_gemdir}" -n "${pkgdir}${MINGW_PREFIX}/bin" \
+    "${_realname}-${pkgver}.gem"
   
-  rm "${pkgdir}${_gemdir}/cache/${_gemname}-${pkgver}.gem"  
+  rm "${pkgdir}/${_gemdir}/cache/${_realname}-${pkgver}.gem"
 }
