python-superqt: remove optional dependencies

--- a/mingw-w64-python-superqt/PKGBUILD
+++ b/mingw-w64-python-superqt/PKGBUILD
@@ -4,15 +4,14 @@ _realname=superqt
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=0.6.7
-pkgrel=1
+pkgrel=2
 pkgdesc='Missing widgets and components for Qt-python (mingw-w64)'
 arch=('any')
-mingw_arch=('ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://pyapp-kit.github.io/superqt/'
 msys2_repository_url='https://github.com/pyapp-kit/superqt'
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
-         "${MINGW_PACKAGE_PREFIX}-python-pint"
          "${MINGW_PACKAGE_PREFIX}-python-pygments"
          "${MINGW_PACKAGE_PREFIX}-python-qtpy"
          "${MINGW_PACKAGE_PREFIX}-python-typing_extensions")
